--- a/mail/fetchmail/Makefile
+++ b/mail/fetchmail/Makefile
@@ -1,12 +1,12 @@
 # New ports collection makefile for:	fetchmail
-# Version required:     4.4.6
+# Version required:     4.4.7
 # Date created:		26 Oct 1996
 # Whom:			Ville Eerola <ve@sci.fi>
 #
-# $Id$
+# $Id: Makefile,v 1.60 1998/05/22 01:34:17 mph Exp $
 #
 
-DISTNAME=       fetchmail-4.4.6
+DISTNAME=       fetchmail-4.4.7
 CATEGORIES=	mail
 MASTER_SITES=	ftp://ftp.ccil.org/pub/esr/fetchmail/
 
