--- a/japanese/vfghostscript55/Makefile
+++ b/japanese/vfghostscript55/Makefile
@@ -3,7 +3,7 @@
 # Date created:		26 Aug 1997
 # Whom:			Mita Yoshio <mita@jp.FreeBSD.org>
 #
-# $Id: Makefile,v 1.19 1998/03/31 00:17:02 asami Exp $
+# $Id: Makefile,v 1.20 1998/05/10 23:50:31 steve Exp $
 #
 
 DISTNAME=	ghostscript-5.10
@@ -17,7 +17,7 @@ MASTER_SITES=	ftp://ftp.cs.wisc.edu/ghost/aladdin/gs510/ \
 		ftp://ftp.mei.co.jp/free/gnu/util/ghostscript/drivers/ \
 		${MASTER_SITE_LOCAL} \
 		http://www.jp.FreeBSD.org/~mita/LOCAL_PORTS/ \
-		http://ldl-www.jaist.ac.jp:8080/~akr/nonresearch/free-software/ghostscript/ \
+		http://www.ldl.jaist.ac.jp/~akr/nonresearch/free-software/ghostscript/ \
 		http://www.jaist.ac.jp/~daisuke/Linux/gs/gs5/Original-sources/OLD/ \
 		http://www.rd.nacsis.ac.jp/~katayama/homepage/ghostscript/jpdf/ \
 		http://itohws03.ee.noda.sut.ac.jp/~matsuda/VFlib-FT/ \
