--- a/games/xboard/Makefile
+++ b/games/xboard/Makefile
@@ -3,7 +3,7 @@
 # Date created:         5 Jan 1997
 # Whom:                 xaa@stack.nl
 #
-# $Id: Makefile,v 1.12 1997/08/08 09:01:04 tg Exp $
+# $Id: Makefile,v 1.13 1998/05/25 03:24:16 steve Exp $
 #
 
 DISTNAME=       xboard-3.6.2
@@ -11,8 +11,6 @@ CATEGORIES=	games
 MASTER_SITES=	${MASTER_SITE_GNU}
 
 MAINTAINER=	xaa@stack.nl
-
-RUN_DEPENDS=	gnuchessx:${PORTSDIR}/games/gnuchess
 
 GNU_CONFIGURE=  yes
 STRIP=
