--- a/print/xtem/Makefile
+++ b/print/xtem/Makefile
@@ -3,7 +3,7 @@
 # Date created:         01 June 1997
 # Whom:                 Peter Cornelius <pc@inr.fzk.de>
 #
-# $Id: Makefile,v 1.2 1998/02/08 21:54:09 asami Exp $
+# $Id: Makefile,v 1.3 1998/02/09 12:42:58 tg Exp $
 
 DISTNAME=	xtem_texmenu.6.18
 PKGNAME=	xtem-6.18
@@ -12,7 +12,7 @@ MASTER_SITES=	ftp://ftp.iwd.uni-bremen.de/pub/tex/xtem/
 
 MAINTAINER=     ports@FreeBSD.ORG
 
-RUN_DEPENDS=	wishx:${PORTSDIR}/lang/tclX75
+RUN_DEPENDS=	wishx:${PORTSDIR}/lang/tclX80
 .if defined(BUILD_IT_ALL)
 RUN_DEPENDS+=	gv:${PORTSDIR}/print/gv \
 		tex:${PORTSDIR}/print/teTeX
@@ -30,7 +30,7 @@ post-extract:
 
 post-patch:
 	@/usr/bin/perl -pi.bak -e "s|@WISHX@|${PREFIX}/bin/wishx|; \
-		s|@TCLSH@|${PREFIX}/bin/tclsh7.5|; \
+		s|@TCLSH@|${PREFIX}/bin/tclsh8.0|; \
 		s|@XTEMPATH@|${PREFIX}/share/xtem|" \
 		${WRKSRC}/xtem
 
