--- a/audio/xmcd/Makefile
+++ b/audio/xmcd/Makefile
@@ -1,15 +1,14 @@
 # New ports collection makefile for:	xmcd
-# Version required:	2.2
+# Version required:	2.3
 # Date created:		16 Februar 1995
 # Whom:			Gennady Sorokopud <gena@NetVision.net.il>
 #
-# $Id: Makefile,v 1.7 1996/11/29 23:39:57 torstenb Exp $
+# $Id: Makefile,v 1.8 1997/09/08 13:20:10 tg Exp $
 #
 
-DISTNAME=	xmcd-2.2
+DISTNAME=	xmcd-2.3
 CATEGORIES=	audio
-MASTER_SITES=	${MASTER_SITE_XCONTRIB}
-MASTER_SITE_SUBDIR=	applications/xmcd
+MASTER_SITES=	http://mercury.hypersurf.com/~amb/download/xmcd/src/
 
 MAINTAINER=	deischen@iworks.InterWorks.org
 
@@ -17,7 +16,6 @@ REQUIRES_MOTIF=	yes
 USE_IMAKE=	yes
 IS_INTERACTIVE=	yes	# asks a lot of questions
 
-post-install:
-	${CP} ${WRKSRC}/README ${PREFIX}/lib/X11/xmcd
+MAN1=		cddbcmd.1 wm2xmcd.1
 
 .include <bsd.port.mk>
