--- a/mail/fetchmail/Makefile
+++ b/mail/fetchmail/Makefile
@@ -1,19 +1,19 @@
 # New ports collection makefile for:	fetchmail
-# Version required:     4.4.7
+# Version required:     4.4.8
 # Date created:		26 Oct 1996
 # Whom:			Ville Eerola <ve@sci.fi>
 #
-# $Id: Makefile,v 1.60 1998/05/22 01:34:17 mph Exp $
+# $Id: Makefile,v 1.61 1998/05/24 03:15:11 steve Exp $
 #
 
-DISTNAME=       fetchmail-4.4.7
+DISTNAME=       fetchmail-4.4.8
 CATEGORIES=	mail
 MASTER_SITES=	ftp://ftp.ccil.org/pub/esr/fetchmail/
 
 MAINTAINER=	ve@sci.fi
 
 GNU_CONFIGURE=	yes
-CONFIGURE_ARGS= --enable-opie --enable-RPA
+CONFIGURE_ARGS= --enable-opie --enable-RPA --enable-POP2
 CONFIGURE_ENV=  LDFLAGS="${CFLAGS}"
 MAN1=		fetchmail.1
 
@@ -28,6 +28,7 @@ post-patch:
 
 post-install:
 	${INSTALL} -d -m 555 -o ${DOCOWN} -g ${DOCGRP} ${FDOC}
+	${LN} -sf fetchmail.1.gz ${PREFIX}/man/man1/fetchmailconf.1.gz
 	cd ${WRKSRC} && ${INSTALL_DATA} \
 	   sample.rcfile FAQ NOTES FEATURES README COPYING \
 	   fetchmail-FAQ.html fetchmail-features.html \
