--- a/www/Mosaic/Makefile
+++ b/www/Mosaic/Makefile
@@ -3,7 +3,7 @@
 # Date created:         7 August 1995
 # Whom:                 torstenb
 #
-# $Id: Makefile,v 1.13 1998/03/28 20:08:37 ache Exp $
+# $Id: Makefile,v 1.14 1998/05/10 22:15:45 steve Exp $
 #
 
 DISTNAME=       Mosaic-src-2.7b5
@@ -11,7 +11,7 @@ PKGNAME=        mosaic-2.7b5
 CATEGORIES=     www
 MASTER_SITES=	ftp://ftp.ncsa.uiuc.edu/Web/Mosaic/Unix/source/
 
-LIB_DEPENDS=    jpeg\\.8\\.:${PORTSDIR}/graphics/jpeg \
+LIB_DEPENDS=    jpeg\\.9\\.:${PORTSDIR}/graphics/jpeg \
 		png\\.2\\.:${PORTSDIR}/graphics/png \
 		Xpm\\.4\\.:${PORTSDIR}/graphics/xpm \
 
