--- a/irc/sic/Makefile
+++ b/irc/sic/Makefile
@@ -3,12 +3,13 @@
 # Date created:		04 Apr 1998
 # Whom:			sec@42.org
 #
-# $Id$
+# $Id: Makefile,v 1.1.1.1 1998/05/27 16:53:56 mph Exp $
 #
 
 DISTNAME=	sic-0.10a
 CATEGORIES=	net
-MASTER_SITES=	http://www.stealth.net/~kalt/sic/
+MASTER_SITES=	http://www.freebsd.org/~mph/distfiles/ \
+		http://www.stealth.net/~kalt/sic/
 EXTRACT_SUFX=	.tgz
 
 MAINTAINER=	sec@42.org
