--- a/games/xgalaga/Makefile
+++ b/games/xgalaga/Makefile
@@ -1,12 +1,12 @@
 # New ports collection makefile for:	xgalaga
-# Version required:	1.6c
+# Version required:	2.0
 # Date created:		27 August 1995
 # Whom:			asami
 #
-# $Id: Makefile,v 1.5 1997/09/06 05:32:33 max Exp $
+# $Id: Makefile,v 1.6 1997/12/25 22:29:20 asami Exp $
 #
 
-DISTNAME=	xgalaga-1.6c
+DISTNAME=	xgalaga-2.0
 CATEGORIES=	games
 MASTER_SITES=	${MASTER_SITE_XCONTRIB}
 MASTER_SITE_SUBDIR=	games
@@ -15,30 +15,24 @@ MAINTAINER=	ports@FreeBSD.ORG
 
 LIB_DEPENDS=	Xpm\\.4\\.:${PORTSDIR}/graphics/xpm
 
-USE_IMAKE=	yes
-NO_INSTALL_MANPAGES=	yes
+HAS_CONFIGURE=	yes
+USE_X11=	yes
+# xgalaga has a very strange usage of these variables...
+CONFIGURE_ARGS=	--prefix=${X11BASE}/lib/X11/xgalaga \
+		--exec_prefix=${X11BASE}/bin
 
-EXTRA_PATCH=	patch-ab
+.if defined(NOSOUND)
+CONFIGURE_ARGS+=	--without-sound
+.endif
 
-nosound:
-	@echo "Okay, making a quiet version of xgalaga...."
-	@cp ${FILESDIR}/${EXTRA_PATCH} ${PATCHDIR}
-	@${MAKE} ${.MAKEFLAGS} all
-
-pre-clean:
-	@rm -f ${PATCHDIR}/${EXTRA_PATCH}
-
-pre-patch:
-	@if [ ! -f ${PATCHDIR}/${EXTRA_PATCH} ]; then \
-	  echo "*****************************************************" ; \
-	  echo "* Note that you can build a version of xgalaga that *" ; \
-	  echo "* doesn't use the sound driver by typing            *" ; \
-	  echo "* \"make nosound\"                                    *" ; \
-	  echo "* following a \"make clean\".                         *" ; \
-	  echo "* Try it if you don't have a sound card and are     *" ; \
-	  echo "* getting core dumps.                               *" ; \
-	  echo "*****************************************************" ; \
-	fi
+pre-configure:
+	@${ECHO} "*****************************************************"
+	@${ECHO} "* Note that you can build a version of xgalaga that *"
+	@${ECHO} "* doesn't use the sound driver by typing            *"
+	@${ECHO} "* \"make -DNOSOUND\"                                  *"
+	@${ECHO} "* following a \"make clean\".                         *"
+	@${ECHO} "* Try it if you don't have a sound card and are     *"
+	@${ECHO} "* getting core dumps.                               *"
+	@${ECHO} "*****************************************************"
 
 .include <bsd.port.mk>
-
