--- a/audio/mpg123/Makefile
+++ b/audio/mpg123/Makefile
@@ -1,12 +1,12 @@
 # New ports collection makefile for:	mpg123
-# Version required:		0.59n
+# Version required:		0.59o
 # Date created:			25 June 1997
 # Whom:				Carey Jones <mcj@acquiesce.org>
 #
-# $Id: Makefile,v 1.4 1998/02/02 14:29:36 vanilla Exp $
+# $Id: Makefile,v 1.5 1998/05/17 03:53:52 mph Exp $
 #
 
-DISTNAME=	mpg123-0.59n
+DISTNAME=	mpg123-0.59o
 CATEGORIES=	audio
 MASTER_SITES=	ftp://ftp.tu-clausthal.de/pub/unix/audio/mpg123/ \
 		http://homepages.uni-tuebingen.de/student/michael.hipp/mpg123/
