--- a/math/xgraph/Makefile
+++ b/math/xgraph/Makefile
@@ -3,14 +3,12 @@
 # Date created:		24 November 1994
 # Whom:			asami
 #
-# $Id: Makefile,v 1.7 1997/09/09 04:31:32 asami Exp $
+# $Id: Makefile,v 1.8 1997/12/25 22:29:43 asami Exp $
 #
 
-DISTNAME=	xgraph-11
-PKGNAME=	xgraph-11.3.2
+DISTNAME=	xgraph-11.3.2
 CATEGORIES=	math print
-MASTER_SITES=	ftp://ftp.iis.u-tokyo.ac.jp/pub/X/R5contrib/
-EXTRACT_SUFX=	.tar.Z
+MASTER_SITES=	ftp://ftp.iis.u-tokyo.ac.jp/pub/X/misc/
 
 MAINTAINER=	ports@FreeBSD.ORG
 
